testsuite/tests/ghc-regress/typecheck/should_fail/tcfail139.hs
-- Should be rejected by Haskell 98

module Foo  where 

type Foo = Double
instance Bounded Foo
